--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,52 +17,192 @@ org-jetbrains-kotlin-plugin-parcelize = { id = "org.jetbrains.kotlin.plugin.parc
 [versions]
 
 google-dagger = "2.48"
+##         ⬆ = "2.48.1"
+##         ⬆ = "2.49"
 kotlin = "1.9.10"
+##  ⬆ = "1.9.20-Beta"
+##  ⬆ = "1.9.20-Beta2"
+##  ⬆ = "1.9.20-RC"
+##  ⬆ = "1.9.20-RC2"
+##  ⬆ = "1.9.20"
+##  ⬆ = "1.9.21"
+##  ⬆ = "2.0.0-Beta1"
 
 androidx-room = "2.5.2"
+##         ⬆ = "2.6.0-alpha01"
+##         ⬆ = "2.6.0-alpha02"
+##         ⬆ = "2.6.0-alpha03"
+##         ⬆ = "2.6.0-beta01"
+##         ⬆ = "2.6.0-rc01"
+##         ⬆ = "2.6.0"
+##         ⬆ = "2.6.1"
 
 androidx-test-ext-junit = "1.1.5"
+##                   ⬆ = "1.2.0-alpha01"
+##                   ⬆ = "1.2.0-alpha02"
 
 androidx-test-espresso = "3.5.1"
+##                  ⬆ = "3.6.0-alpha01"
+##                  ⬆ = "3.6.0-alpha02"
 
 androidx-compose-ui = "1.5.1"
+##               ⬆ = "1.5.2"
+##               ⬆ = "1.5.3"
+##               ⬆ = "1.5.4"
+##               ⬆ = "1.6.0-alpha01"
+##               ⬆ = "1.6.0-alpha02"
+##               ⬆ = "1.6.0-alpha03"
+##               ⬆ = "1.6.0-alpha04"
+##               ⬆ = "1.6.0-alpha05"
+##               ⬆ = "1.6.0-alpha06"
+##               ⬆ = "1.6.0-alpha07"
+##               ⬆ = "1.6.0-alpha08"
+##               ⬆ = "1.6.0-beta01"
+##               ⬆ = "1.6.0-beta02"
 compose-navigation = "2.7.5"
 
 androidx-core = "1.12.0"
+##         ⬆ = "1.13.0-alpha01"
+##         ⬆ = "1.13.0-alpha02"
 
 androidx-lifecycle = "2.6.2"
+##              ⬆ = "2.7.0-alpha01"
+##              ⬆ = "2.7.0-alpha02"
+##              ⬆ = "2.7.0-alpha03"
+##              ⬆ = "2.7.0-beta01"
+##              ⬆ = "2.7.0-rc01"
 
 androidx-activity = "1.7.2"
+##             ⬆ = "1.8.0-alpha01"
+##             ⬆ = "1.8.0-alpha02"
+##             ⬆ = "1.8.0-alpha03"
+##             ⬆ = "1.8.0-alpha04"
+##             ⬆ = "1.8.0-alpha05"
+##             ⬆ = "1.8.0-alpha06"
+##             ⬆ = "1.8.0-alpha07"
+##             ⬆ = "1.8.0-beta01"
+##             ⬆ = "1.8.0-rc01"
+##             ⬆ = "1.8.0"
+##             ⬆ = "1.8.1"
+##             ⬆ = "1.9.0-alpha01"
 
 androidx-compose-material3 = "1.2.0-alpha03"
+##                      ⬆ = "1.2.0-alpha04"
+##                      ⬆ = "1.2.0-alpha05"
+##                      ⬆ = "1.2.0-alpha06"
+##                      ⬆ = "1.2.0-alpha07"
+##                      ⬆ = "1.2.0-alpha08"
+##                      ⬆ = "1.2.0-alpha09"
+##                      ⬆ = "1.2.0-alpha10"
+##                      ⬆ = "1.2.0-alpha11"
+##                      ⬆ = "1.2.0-alpha12"
 
 coil-kt = "2.2.2"
+##   ⬆ = "2.3.0"
+##   ⬆ = "2.4.0"
+##   ⬆ = "2.5.0"
 
 androidx-hilt-navigation-compose = "1.0.0"
+##                            ⬆ = "1.1.0-alpha01"
+##                            ⬆ = "1.1.0-beta01"
+##                            ⬆ = "1.1.0-rc01"
+##                            ⬆ = "1.1.0"
 
 retrofit2 = "2.9.0"
 
 okhttp3 = "5.0.0-alpha.7"
+##   ⬆ = "5.0.0-alpha.8"
+##   ⬆ = "5.0.0-alpha.9"
+##   ⬆ = "5.0.0-alpha.10"
+##   ⬆ = "5.0.0-alpha.11"
 
 moshi = "1.12.0"
+## ⬆ = "1.13.0"
+## ⬆ = "1.14.0"
+## ⬆ = "1.15.0"
 
 jakewharton-timber = "5.0.1"
 
 google-accompanist = "0.31.2-alpha"
+##              ⬆ = "0.31.3-beta"
+##              ⬆ = "0.31.4-beta"
+##              ⬆ = "0.31.5-beta"
+##              ⬆ = "0.31.6-rc"
+##              ⬆ = "0.32.0"
+##              ⬆ = "0.33.0-alpha"
+##              ⬆ = "0.33.1-alpha"
+##              ⬆ = "0.33.2-alpha"
 
 google-android-maps-compose = "2.5.3"
+##                       ⬆ = "2.6.0"
+##                       ⬆ = "2.7.0"
+##                       ⬆ = "2.7.1"
+##                       ⬆ = "2.7.2"
+##                       ⬆ = "2.7.3"
+##                       ⬆ = "2.7.4"
+##                       ⬆ = "2.8.0"
+##                       ⬆ = "2.8.1"
+##                       ⬆ = "2.9.0"
+##                       ⬆ = "2.9.1"
+##                       ⬆ = "2.10.0"
+##                       ⬆ = "2.11.0"
+##                       ⬆ = "2.11.1"
+##                       ⬆ = "2.11.2"
+##                       ⬆ = "2.11.3"
+##                       ⬆ = "2.11.4"
+##                       ⬆ = "2.11.5"
+##                       ⬆ = "2.12.0"
+##                       ⬆ = "2.13.0"
+##                       ⬆ = "2.13.1"
+##                       ⬆ = "2.14.0"
+##                       ⬆ = "2.14.1"
+##                       ⬆ = "2.15.0"
+##                       ⬆ = "3.0.0"
+##                       ⬆ = "3.1.0"
+##                       ⬆ = "3.1.1"
+##                       ⬆ = "4.0.0"
+##                       ⬆ = "4.1.0"
+##                       ⬆ = "4.1.1"
+##                       ⬆ = "4.2.0"
+##                       ⬆ = "4.3.0"
 
-google-android-play-services-maps = "18.1.0"
+google-android-play-services-maps = "18.2.0"
+##
 
 androidx-multidex = "2.0.1"
 
 junit-junit = "4.13.2"
 
 androidx-compose-compiler = "1.5.3"
+##                     ⬆ = "1.5.4"
+##                     ⬆ = "1.5.5"
+##                     ⬆ = "1.5.6"
 appcompat = "1.6.1"
 
-
 androidx-compose-animation = "1.4.3"
+##                      ⬆ = "1.5.0-alpha01"
+##                      ⬆ = "1.5.0-alpha02"
+##                      ⬆ = "1.5.0-alpha03"
+##                      ⬆ = "1.5.0-alpha04"
+##                      ⬆ = "1.5.0-beta01"
+##                      ⬆ = "1.5.0-beta02"
+##                      ⬆ = "1.5.0-beta03"
+##                      ⬆ = "1.5.0-rc01"
+##                      ⬆ = "1.5.0"
+##                      ⬆ = "1.5.1"
+##                      ⬆ = "1.5.2"
+##                      ⬆ = "1.5.3"
+##                      ⬆ = "1.5.4"
+##                      ⬆ = "1.6.0-alpha01"
+##                      ⬆ = "1.6.0-alpha02"
+##                      ⬆ = "1.6.0-alpha03"
+##                      ⬆ = "1.6.0-alpha04"
+##                      ⬆ = "1.6.0-alpha05"
+##                      ⬆ = "1.6.0-alpha06"
+##                      ⬆ = "1.6.0-alpha07"
+##                      ⬆ = "1.6.0-alpha08"
+##                      ⬆ = "1.6.0-beta01"
+##                      ⬆ = "1.6.0-beta02"
 material = "1.9.0"
 
 [libraries]
@@ -94,8 +234,12 @@ compose-navigation = { group = "androidx.navigation", name = "navigation-compose
 compose-coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-kt" }
 
 compose-destinations-core = "io.github.raamcosta.compose-destinations:animations-core:1.9.53"
+##                                                                                ⬆ :1.9.54"
+##                                                                                ⬆ :1.9.55"
 
 compose-destinations-ksp = "io.github.raamcosta.compose-destinations:ksp:1.9.53"
+##                                                                   ⬆ :1.9.54"
+##                                                                   ⬆ :1.9.55"
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "google-dagger" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "google-dagger" }
@@ -126,10 +270,21 @@ timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "jak
 accompanist-flowlayout = { group = "com.google.accompanist", name = "accompanist-flowlayout", version.ref = "google-accompanist" }
 
 lottie-compose = "com.airbnb.android:lottie-compose:5.0.1"
+##                                              ⬆ :5.0.2"
+##                                              ⬆ :5.0.3"
+##                                              ⬆ :5.1.0"
+##                                              ⬆ :5.1.1"
+##                                              ⬆ :5.2.0"
+##                                              ⬆ :6.0.0"
+##                                              ⬆ :6.0.1"
+##                                              ⬆ :6.1.0"
+##                                              ⬆ :6.2.0"
 
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "google-android-play-services-maps" }
 
 komposecountrycodepicker = "com.github.JoelKanyi:KomposeCountryCodePicker:1.0.6"
+##                                                                    ⬆ :1.0.7"
+##                                                                    ⬆ :1.0.8"
 
 junit-core = { group = "junit", name = "junit", version.ref = "junit-junit" }
 junit4-ui-test= { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "androidx-compose-ui" }
@@ -141,17 +296,40 @@ androidx-compose-compiler-compiler = { group = "androidx.compose.compiler", name
 kotlin-parcelize-compiler = { group = "org.jetbrains.kotlin", name = "kotlin-parcelize-compiler", version.ref = "kotlin" }
 
 symbol-processing = "com.google.devtools.ksp:symbol-processing:1.9.10-1.0.13"
+##                                                         ⬆ :1.9.20-Beta-1.0.13"
+##                                                         ⬆ :1.9.20-Beta2-1.0.13"
+##                                                         ⬆ :1.9.20-RC-1.0.13"
+##                                                         ⬆ :1.9.20-RC2-1.0.13"
+##                                                         ⬆ :1.9.20-1.0.13"
+##                                                         ⬆ :1.9.20-1.0.14"
+##                                                         ⬆ :1.9.21-1.0.15"
+##                                                         ⬆ :2.0.0-Beta1-1.0.14"
+##                                                         ⬆ :2.0.0-Beta1-1.0.15"
 
 symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.10-1.0.13"
+##                                                                 ⬆ :1.9.20-Beta-1.0.13"
+##                                                                 ⬆ :1.9.20-Beta2-1.0.13"
+##                                                                 ⬆ :1.9.20-RC-1.0.13"
+##                                                                 ⬆ :1.9.20-RC2-1.0.13"
+##                                                                 ⬆ :1.9.20-1.0.13"
+##                                                                 ⬆ :1.9.20-1.0.14"
+##                                                                 ⬆ :1.9.21-1.0.15"
+##                                                                 ⬆ :2.0.0-Beta1-1.0.14"
+##                                                                 ⬆ :2.0.0-Beta1-1.0.15"
 
 symbol-processing-cmdline = "com.google.devtools.ksp:symbol-processing-cmdline:1.9.10-1.0.13"
+##                                                                         ⬆ :1.9.20-Beta-1.0.13"
+##                                                                         ⬆ :1.9.20-Beta2-1.0.13"
+##                                                                         ⬆ :1.9.20-RC-1.0.13"
+##                                                                         ⬆ :1.9.20-RC2-1.0.13"
+##                                                                         ⬆ :1.9.20-1.0.13"
+##                                                                         ⬆ :1.9.20-1.0.14"
+##                                                                         ⬆ :1.9.21-1.0.15"
+##                                                                         ⬆ :2.0.0-Beta1-1.0.14"
+##                                                                         ⬆ :2.0.0-Beta1-1.0.15"
 
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 accompanist-nav-animation = { group = "com.google.accompanist", name = "accompanist-navigation-animation", version.ref = "google-accompanist" }
 
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-
-## THE END
-
-
