--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -204,6 +204,7 @@ androidx-compose-animation = "1.4.3"
 ##                      ⬆ = "1.6.0-beta01"
 ##                      ⬆ = "1.6.0-beta02"
 material = "1.9.0"
+secrets-gradle-plugin = "2.0.1"
 
 [libraries]
 
@@ -245,6 +246,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "google-dagger" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
 
+secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "secrets-gradle-plugin" }
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version.ref = "androidx-compose-ui" }
 
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
