Remove Quotations Marks from Google API Key

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="${googleKey}"/>
+            android:value="${google}"/>
+
     </application>
 
 </manifest>
