--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -25,6 +25,10 @@ jobs:
           # Step 2 - Checkout the repository, making it available to the workflow
          - uses: actions/checkout@v3
          
+         # Step 2 - Checkout the repository, making it available to the workflow
+         -  name: Get maps key from secrets
+            run: echo "${{secret.MAPS_API_KEY }}" > $GITHUB_WORKSPACE/mapskey.properties
+         
          # Step 3 - Setup Java
          - name: Setup JDK 18
            uses: actions/setup-java@v3
