--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -91,7 +91,7 @@ jobs:
       steps:
          
          # Step 1 - Checkout
-         - uses: actions/checkout@v3
+        # - uses: actions/checkout@v3
          
          # Step 2 - Download aab
          - name: Download app bundle from artifact
