--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
             </intent-filter>
         </activity>
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="${google}"/>
+            android:value="${GOOGLE_KEY}"/>
 
     </application>
 
+    <!---->
 </manifest>
