--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,31 +2,22 @@
 
 [plugins]
 
-com-android-application = { id = "com.android.application", version = "8.1.1" }
+
 
 com-android-library = { id = "com.android.library", version = "8.1.1" }
 
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version = "1.9.10" }
 
-com-google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version = "2.48" }
 
 com-google-devtools-ksp = { id = "com.google.devtools.ksp", version = "1.9.10-1.0.13" }
 
-org-jetbrains-kotlin-plugin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version = "1.9.10" }
+
 
 [versions]
 
-google-dagger = "2.48"
-##         ⬆ = "2.48.1"
-##         ⬆ = "2.49"
-kotlin = "1.9.10"
-##  ⬆ = "1.9.20-Beta"
-##  ⬆ = "1.9.20-Beta2"
-##  ⬆ = "1.9.20-RC"
-##  ⬆ = "1.9.20-RC2"
-##  ⬆ = "1.9.20"
-##  ⬆ = "1.9.21"
-##  ⬆ = "2.0.0-Beta1"
+google-dagger = "2.50"
+
+kotlin = "2.0.0-Beta2"
 
 androidx-room = "2.5.2"
 ##         ⬆ = "2.6.0-alpha01"
@@ -59,7 +50,9 @@ androidx-compose-ui = "1.5.1"
 ##               ⬆ = "1.6.0-alpha08"
 ##               ⬆ = "1.6.0-beta01"
 ##               ⬆ = "1.6.0-beta02"
+##               ⬆ = "1.6.0-beta03"
 compose-navigation = "2.7.5"
+##              ⬆ = "2.7.6"
 
 androidx-core = "1.12.0"
 ##         ⬆ = "1.13.0-alpha01"
@@ -71,6 +64,7 @@ androidx-lifecycle = "2.6.2"
 ##              ⬆ = "2.7.0-alpha03"
 ##              ⬆ = "2.7.0-beta01"
 ##              ⬆ = "2.7.0-rc01"
+##              ⬆ = "2.7.0-rc02"
 
 androidx-activity = "1.7.2"
 ##             ⬆ = "1.8.0-alpha01"
@@ -84,6 +78,7 @@ androidx-activity = "1.7.2"
 ##             ⬆ = "1.8.0-rc01"
 ##             ⬆ = "1.8.0"
 ##             ⬆ = "1.8.1"
+##             ⬆ = "1.8.2"
 ##             ⬆ = "1.9.0-alpha01"
 
 androidx-compose-material3 = "1.2.0-alpha03"
@@ -96,6 +91,7 @@ androidx-compose-material3 = "1.2.0-alpha03"
 ##                      ⬆ = "1.2.0-alpha10"
 ##                      ⬆ = "1.2.0-alpha11"
 ##                      ⬆ = "1.2.0-alpha12"
+##                      ⬆ = "1.2.0-beta01"
 
 coil-kt = "2.2.2"
 ##   ⬆ = "2.3.0"
@@ -107,6 +103,7 @@ androidx-hilt-navigation-compose = "1.0.0"
 ##                            ⬆ = "1.1.0-beta01"
 ##                            ⬆ = "1.1.0-rc01"
 ##                            ⬆ = "1.1.0"
+##                            ⬆ = "1.2.0-alpha01"
 
 retrofit2 = "2.9.0"
 
@@ -115,6 +112,7 @@ okhttp3 = "5.0.0-alpha.7"
 ##   ⬆ = "5.0.0-alpha.9"
 ##   ⬆ = "5.0.0-alpha.10"
 ##   ⬆ = "5.0.0-alpha.11"
+##   ⬆ = "5.0.0-alpha.12"
 
 moshi = "1.12.0"
 ## ⬆ = "1.13.0"
@@ -167,16 +165,16 @@ google-android-maps-compose = "2.5.3"
 ##                       ⬆ = "4.3.0"
 
 google-android-play-services-maps = "18.2.0"
-##
 
 androidx-multidex = "2.0.1"
 
 junit-junit = "4.13.2"
 
 androidx-compose-compiler = "1.5.3"
-##                     ⬆ = "1.5.4"
+##                     ⬆ = "1.5.4"*
 ##                     ⬆ = "1.5.5"
 ##                     ⬆ = "1.5.6"
+##                     ⬆ = "1.5.7"
 appcompat = "1.6.1"
 
 androidx-compose-animation = "1.4.3"
@@ -203,6 +201,7 @@ androidx-compose-animation = "1.4.3"
 ##                      ⬆ = "1.6.0-alpha08"
 ##                      ⬆ = "1.6.0-beta01"
 ##                      ⬆ = "1.6.0-beta02"
+##                      ⬆ = "1.6.0-beta03"
 material = "1.9.0"
 secrets-gradle-plugin = "2.0.1"
 
@@ -305,8 +304,10 @@ symbol-processing = "com.google.devtools.ksp:symbol-processing:1.9.10-1.0.13"
 ##                                                         ⬆ :1.9.20-1.0.13"
 ##                                                         ⬆ :1.9.20-1.0.14"
 ##                                                         ⬆ :1.9.21-1.0.15"
+##                                                         ⬆ :1.9.21-1.0.16"
 ##                                                         ⬆ :2.0.0-Beta1-1.0.14"
 ##                                                         ⬆ :2.0.0-Beta1-1.0.15"
+##                                                         ⬆ :2.0.0-Beta2-1.0.16"
 
 symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.10-1.0.13"
 ##                                                                 ⬆ :1.9.20-Beta-1.0.13"
@@ -316,8 +317,10 @@ symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.10-1.
 ##                                                                 ⬆ :1.9.20-1.0.13"
 ##                                                                 ⬆ :1.9.20-1.0.14"
 ##                                                                 ⬆ :1.9.21-1.0.15"
+##                                                                 ⬆ :1.9.21-1.0.16"
 ##                                                                 ⬆ :2.0.0-Beta1-1.0.14"
 ##                                                                 ⬆ :2.0.0-Beta1-1.0.15"
+##                                                                 ⬆ :2.0.0-Beta2-1.0.16"
 
 symbol-processing-cmdline = "com.google.devtools.ksp:symbol-processing-cmdline:1.9.10-1.0.13"
 ##                                                                         ⬆ :1.9.20-Beta-1.0.13"
@@ -327,8 +330,10 @@ symbol-processing-cmdline = "com.google.devtools.ksp:symbol-processing-cmdline:1
 ##                                                                         ⬆ :1.9.20-1.0.13"
 ##                                                                         ⬆ :1.9.20-1.0.14"
 ##                                                                         ⬆ :1.9.21-1.0.15"
+##                                                                         ⬆ :1.9.21-1.0.16"
 ##                                                                         ⬆ :2.0.0-Beta1-1.0.14"
 ##                                                                         ⬆ :2.0.0-Beta1-1.0.15"
+##                                                                         ⬆ :2.0.0-Beta2-1.0.16"
 
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 accompanist-nav-animation = { group = "com.google.accompanist", name = "accompanist-navigation-animation", version.ref = "google-accompanist" }
