--- a/versions.properties
+++ b/versions.properties
@@ -8,6 +8,7 @@
 #### suppress inspection "UnusedProperty" for whole file
 
 version.androidx.navigation=2.7.5
+##              # available=2.7.6
 
 ## unused
 version.retrofit2=2.9.0
@@ -25,7 +26,9 @@ version.kotlin=1.9.10
 ## # available=1.9.20-RC2
 ## # available=1.9.20
 ## # available=1.9.21
+## # available=1.9.22
 ## # available=2.0.0-Beta1
+## # available=2.0.0-Beta2
 
 ## unused
 version.junit.junit=4.13.2
@@ -110,12 +113,15 @@ plugin.com.google.devtools.ksp=1.9.10-1.0.13
 ##                 # available=1.9.20-1.0.13
 ##                 # available=1.9.20-1.0.14
 ##                 # available=1.9.21-1.0.15
+##                 # available=1.9.21-1.0.16
 ##                 # available=2.0.0-Beta1-1.0.14
 ##                 # available=2.0.0-Beta1-1.0.15
+##                 # available=2.0.0-Beta2-1.0.16
 
 plugin.com.google.dagger.hilt.android=2.48
 ##                        # available=2.48.1
 ##                        # available=2.49
+##                        # available=2.50
 
 ## unused
 plugin.android=8.1.1
