Update Compose Compiler Version to 1.5.7

--- a/versions.properties
+++ b/versions.properties
@@ -19,7 +19,7 @@ version.okhttp3=5.0.0-alpha.7
 ## unused
 version.moshi=1.12.0
 
-version.kotlin=1.9.10
+version.kotlin=1.9.21
 ## # available=1.9.20-Beta
 ## # available=1.9.20-Beta2
 ## # available=1.9.20-RC
@@ -55,13 +55,13 @@ version.google.android.maps-compose=2.5.3
 version.google.accompanist=0.31.2-alpha
 
 ## unused
-version.com.google.devtools.ksp..symbol-processing-cmdline=1.9.10-1.0.13
+##version.com.google.devtools.ksp..symbol-processing-cmdline=1.9.10-1.0.13
 
 ## unused
-version.com.google.devtools.ksp..symbol-processing-api=1.9.10-1.0.13
+##version.com.google.devtools.ksp..symbol-processing-api=1.9.10-1.0.13
 
 ## unused
-version.com.google.devtools.ksp..symbol-processing=1.9.10-1.0.13
+##version.com.google.devtools.ksp..symbol-processing=1.9.10-1.0.13
 
 ## unused
 version.com.github.JoelKanyi..KomposeCountryCodePicker=1.0.3
@@ -105,7 +105,7 @@ version.androidx.compose.animation=1.4.3
 ## unused
 version.androidx.activity=1.7.2
 
-plugin.com.google.devtools.ksp=1.9.10-1.0.13
+##plugin.com.google.devtools.ksp=1.9.10-1.0.13
 ##                 # available=1.9.20-Beta-1.0.13
 ##                 # available=1.9.20-Beta2-1.0.13
 ##                 # available=1.9.20-RC-1.0.13
