--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,51 +6,29 @@
 
 com-android-library = { id = "com.android.library", version = "8.1.1" }
 
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version = "1.9.10" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version = "1.9.21" }
 
 
-com-google-devtools-ksp = { id = "com.google.devtools.ksp", version = "1.9.10-1.0.13" }
+com-google-devtools-ksp = { id = "com.google.devtools.ksp", version = "1.9.21-1.0.15" }
 
 
 
 [versions]
 
 google-dagger = "2.50"
-
 kotlin = "2.0.0-Beta2"
 
-androidx-room = "2.5.2"
-##         ⬆ = "2.6.0-alpha01"
-##         ⬆ = "2.6.0-alpha02"
-##         ⬆ = "2.6.0-alpha03"
-##         ⬆ = "2.6.0-beta01"
-##         ⬆ = "2.6.0-rc01"
-##         ⬆ = "2.6.0"
-##         ⬆ = "2.6.1"
+androidx-room = "2.6.1"
 
-androidx-test-ext-junit = "1.1.5"
-##                   ⬆ = "1.2.0-alpha01"
-##                   ⬆ = "1.2.0-alpha02"
 
-androidx-test-espresso = "3.5.1"
-##                  ⬆ = "3.6.0-alpha01"
-##                  ⬆ = "3.6.0-alpha02"
+androidx-test-ext-junit = "1.2.0-alpha02"
 
-androidx-compose-ui = "1.5.1"
-##               ⬆ = "1.5.2"
-##               ⬆ = "1.5.3"
-##               ⬆ = "1.5.4"
-##               ⬆ = "1.6.0-alpha01"
-##               ⬆ = "1.6.0-alpha02"
-##               ⬆ = "1.6.0-alpha03"
-##               ⬆ = "1.6.0-alpha04"
-##               ⬆ = "1.6.0-alpha05"
-##               ⬆ = "1.6.0-alpha06"
-##               ⬆ = "1.6.0-alpha07"
-##               ⬆ = "1.6.0-alpha08"
-##               ⬆ = "1.6.0-beta01"
-##               ⬆ = "1.6.0-beta02"
-##               ⬆ = "1.6.0-beta03"
+
+androidx-test-espresso = "3.6.0-alpha02"
+
+
+androidx-compose-ui = "1.5.4"
+
 compose-navigation = "2.7.5"
 ##              ⬆ = "2.7.6"
 
@@ -213,7 +191,6 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidx
 
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidx-room" }
 
-kotlin-parcelize-runtime = { group = "org.jetbrains.kotlin", name = "kotlin-parcelize-runtime", version.ref = "kotlin" }
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidx-compose-material3" }
 compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "androidx-activity" }
 
@@ -292,51 +269,6 @@ junit4-ui-test= { group = "androidx.compose.ui", name = "ui-test-junit4", versio
 
 junit-androidx = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 
-androidx-compose-compiler-compiler = { group = "androidx.compose.compiler", name = "compiler", version.ref = "androidx-compose-compiler" }
-
-kotlin-parcelize-compiler = { group = "org.jetbrains.kotlin", name = "kotlin-parcelize-compiler", version.ref = "kotlin" }
-
-symbol-processing = "com.google.devtools.ksp:symbol-processing:1.9.10-1.0.13"
-##                                                         ⬆ :1.9.20-Beta-1.0.13"
-##                                                         ⬆ :1.9.20-Beta2-1.0.13"
-##                                                         ⬆ :1.9.20-RC-1.0.13"
-##                                                         ⬆ :1.9.20-RC2-1.0.13"
-##                                                         ⬆ :1.9.20-1.0.13"
-##                                                         ⬆ :1.9.20-1.0.14"
-##                                                         ⬆ :1.9.21-1.0.15"
-##                                                         ⬆ :1.9.21-1.0.16"
-##                                                         ⬆ :2.0.0-Beta1-1.0.14"
-##                                                         ⬆ :2.0.0-Beta1-1.0.15"
-##                                                         ⬆ :2.0.0-Beta2-1.0.16"
-
-symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.10-1.0.13"
-##                                                                 ⬆ :1.9.20-Beta-1.0.13"
-##                                                                 ⬆ :1.9.20-Beta2-1.0.13"
-##                                                                 ⬆ :1.9.20-RC-1.0.13"
-##                                                                 ⬆ :1.9.20-RC2-1.0.13"
-##                                                                 ⬆ :1.9.20-1.0.13"
-##                                                                 ⬆ :1.9.20-1.0.14"
-##                                                                 ⬆ :1.9.21-1.0.15"
-##                                                                 ⬆ :1.9.21-1.0.16"
-##                                                                 ⬆ :2.0.0-Beta1-1.0.14"
-##                                                                 ⬆ :2.0.0-Beta1-1.0.15"
-##                                                                 ⬆ :2.0.0-Beta2-1.0.16"
-
-symbol-processing-cmdline = "com.google.devtools.ksp:symbol-processing-cmdline:1.9.10-1.0.13"
-##                                                                         ⬆ :1.9.20-Beta-1.0.13"
-##                                                                         ⬆ :1.9.20-Beta2-1.0.13"
-##                                                                         ⬆ :1.9.20-RC-1.0.13"
-##                                                                         ⬆ :1.9.20-RC2-1.0.13"
-##                                                                         ⬆ :1.9.20-1.0.13"
-##                                                                         ⬆ :1.9.20-1.0.14"
-##                                                                         ⬆ :1.9.21-1.0.15"
-##                                                                         ⬆ :1.9.21-1.0.16"
-##                                                                         ⬆ :2.0.0-Beta1-1.0.14"
-##                                                                         ⬆ :2.0.0-Beta1-1.0.15"
-##                                                                         ⬆ :2.0.0-Beta2-1.0.16"
-
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-accompanist-nav-animation = { group = "com.google.accompanist", name = "accompanist-navigation-animation", version.ref = "google-accompanist" }
 
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-test-espresso" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
