--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,7 +45,7 @@ androidx-lifecycle = "2.6.2"
 ##              ⬆ = "2.7.0-rc01"
 ##              ⬆ = "2.7.0-rc02"
 
-androidx-activity = "1.7.2"
+androidx-activity = "1.9.0-alpha01"
 ##             ⬆ = "1.8.0-alpha01"
 ##             ⬆ = "1.8.0-alpha02"
 ##             ⬆ = "1.8.0-alpha03"
